# sheriff-balance-manager-bot

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  start.sh
alembic/: env.py
alembic/versions/: 001_initial.py  002_bot_settings.py
bot/: __main__.py
bot/config/: __init__.py  currencies.py  settings.py
bot/handlers/: __init__.py  access.py  admin.py  chat_manage.py  common.py  employee.py  history.py  wallet.py
bot/keyboards/: __init__.py  history.py  operation.py
bot/models/: __init__.py  access_window.py  balance.py  base.py  bot_settings.py  operation.py  user.py
bot/repositories/: __init__.py  access_repo.py  balance_repo.py  operation_repo.py  settings_repo.py  user_repo.py
bot/services/: __init__.py  access_windows.py  balances.py  export_excel.py  history.py  notifications.py  operations.py
bot/utils/: __init__.py  formatting.py  parsers.py  time.py
