[project]
name = "sheriff-balance-manager-bot"
version = "1.0.0"
description = "Telegram bot for multi-currency balance management"
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.13,<4",
    "sqlalchemy[asyncio]>=2.0,<3",
    "asyncpg>=0.30,<1",
    "alembic>=1.14,<2",
    "openpyxl>=3.1,<4",
    "pydantic-settings>=2.0,<3",
    "redis>=5.0,<6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["bot"]
